basic ui for users

--- a/Admin/create.html
+++ b/Admin/create.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>All Blog Posts</title>
+		<title>Create a Blog Posts</title>
 	</head>
 	<body>
 	</body>
