--- a/artical.html
+++ b/artical.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>All Blog Posts</title>
+		<title>A Blog's Artical</title>
+		<style type="text/css">
+			h1{
+				text-align: center; 
+			}
+			
+			.inline{
+				display: inline-block;
+			}
+			
+
+		</style>
 	</head>
 	<body>
+		<h1>title</h1>
+		<h2 class="inline">author</h2>
+		<h3 class="inline" id="date"><em>date</em></h3>
+		<h3><a href="index.html">Back to feed</a><h3>
+		<h4>tags</h4>
+		<img src=""/>
+		<p>text</p>
+		
+		
 	</body>
 </html>
