--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 		<title>All Blog Posts</title>
 	</head>
 	<body>
+		<ul id="feed">
+			<li><a href="artical.html">title, image, date, author</a></li>
+		</ul>
 	</body>
 </html>
