--- a/Admin/index.html
+++ b/Admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>All Blog Posts</title>
+		<title>All Blog Posts (Admin Access)</title>
 	</head>
 	<body>
 	</body>
