--- a/Admin/index.html
+++ b/Admin/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>All Blog Posts (Admin Access)</title>
+		<title>All Blog Posts</title>
+		<script src="../sources/jquery-3.5.1.min.js"></script>
 	</head>
 	<body>
+		<ul id="feed">
+		</ul>
+		<script>
+			$.getJSON('../https://jsonblob.com/api/jsonBlob/320e818f-6753-11eb-9c90-47434578f6ad',function(data){
+				for(var i=0;i<data.length;i++){
+					$('#feed').append('<li><a href="artical.html?index='+i+'"><img id="image" src="'+data[i].image+'" width="100" length="50"/> ,<strong> '+data[i].title+'</strong> , '+data[i].date+' , '+data[i].author+' , '+'</a></li>')
+				}
+			});
+		</script>
+		<!-- 
+			https://jsonblob.com/320e818f-6753-11eb-9c90-47434578f6ad
+		-->
 	</body>
 </html>
