--- a/Admin/edit.html
+++ b/Admin/edit.html
@@ -4,6 +4,7 @@
 		<title>Edit a Blog Posts</title>
 		<script src="../sources/jquery-3.5.1.min.js"></script>
 		<script src="../sources/app.js"></script>
+		<link rel = "stylesheet" href = "../sources/bootstrapEdited.css" type = "text/css" />
 	</head>
 	<body>
 		<h3><a href="index.html">Back to feed</a><h3>
