--- a/artical.html
+++ b/artical.html
@@ -4,6 +4,7 @@
 		<title>A Blog's Artical</title>
 		<script src="sources/jquery-3.5.1.min.js"></script>
 		<script src="sources/app.js"></script>
+		<link rel = "stylesheet" href = "sources/bootstrapEdited.css" type = "text/css" />
 		<style type="text/css">
 			h1{
 				text-align: center; 
