--- a/Admin/create.html
+++ b/Admin/create.html
@@ -4,6 +4,7 @@
 		<title>Create a Blog Posts</title>
 		<script src="../sources/jquery-3.5.1.min.js"></script>
 		<script src="../sources/app.js"></script>
+		<link rel = "stylesheet" href = "../sources/bootstrapEdited.css" type = "text/css" />
 	</head>
 	<body>
 		<h3><a href="index.html">Back to feed</a><h3>
@@ -21,7 +22,6 @@
 			<label>Image URL</label><br />
 			<input name="image" type="url" />
 			<br /><br />
-			<label>Tags</label><br />
 			<label>Tags</label><br />
 			<textarea name="tags" cols="50" ></textarea>
 			<br /><br />
